--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "env-cmd": "^10.1.0",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
+    "markdown-it": "^13.0.0",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.3",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
