--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breadstake-vite",
+  "name": "breadchain-crowdstaking",
   "homepage": ".",
   "private": true,
   "version": "0.0.0",
