--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss-import": "^14.1.0",
     "prettier": "^2.5.1",
     "serve": "^13.0.2",
     "ts-jest": "^27.1.3",
