--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^8.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "wagmi": "^0.4.12"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
