--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.6",
     "process": "^0.11.10",
     "react": "^17.0.2",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
