--- a/package.json
+++ b/package.json
@@ -10,35 +10,28 @@
     "serve": "serve dist"
   },
   "dependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
-    "buffer": "^6.0.3",
     "env-cmd": "^10.1.0",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
-    "lodash": "^4.17.21",
     "postcss": "^8.4.6",
-    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
-    "tailwindcss": "^3.0.23",
-    "util": "^0.12.4",
-    "wagmi": "^0.4.12"
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.3.2",
+    "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -49,7 +42,7 @@
     "serve": "^13.0.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.4",
-    "vite": "^2.9.8",
+    "vite": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "volta": {
