--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.8",
+    "vite-tsconfig-paths": "^3.5.1",
     "web-vitals": "^2.1.4"
   },
   "volta": {
