--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "serve": "serve dist",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "hardhat:chain": "hardhat node",
+    "hardhat:init": "HARDHAT_NETWORK=localhost node hardhat/init.js"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -30,12 +32,13 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23",
-    "wagmi": "^0.6.3"
+    "wagmi": "^0.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
@@ -54,6 +57,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "hardhat": "^2.11.2",
+    "hardhat-ethernal": "^2.1.0",
     "postcss-import": "^14.1.0",
     "prettier": "^2.5.1",
     "serve": "^13.0.2",
