--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "build": "tsc && vite build",
     "build:testing": "yarn build --mode testing",
     "preview": "vite preview",
-    "serve": "serve dist",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "hardhat:dev": "concurrently \"yarn hardhat:chain\" \"yarn hardhat:fund\"",
     "hardhat:chain": "hardhat node",
     "hardhat:fund": "HARDHAT_NETWORK=localhost node hardhat/fund.js",
-    "test": "env-cmd -f .env yarn synpress run --config supportFile='tests/e2e/support.js'",
-    "//test": "env-cmd -f .env yarn synpress run -cf synpress.json --config supportFile='support.js'",
-    "test:watch": "env-cmd -f .env npx synpress open -cf synpress.json"
+    "e2e:local": "yarn build:testing && ts-node tests/scripts/local.ts",
+    "test:synpress": "env-cmd -f .env yarn synpress run --config supportFile='tests/e2e/support.js'"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -66,10 +64,12 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "hardhat": "^2.11.2",
     "hardhat-ethernal": "^2.1.0",
+    "kill-port": "^2.0.1",
     "postcss-import": "^14.1.0",
     "prettier": "^2.5.1",
-    "serve": "^13.0.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.8",
     "vite-tsconfig-paths": "^3.5.1",
