--- a/example.env
+++ b/example.env
@@ -1,1 +1,10 @@
 VITE_ALCHEMY_ID=
+ALCHEMY_ID=
+
+# synpress
+CYPRESS_BASE_URL=
+PRIVATE_KEY=
+
+# optional - ethernal gives you a block explorer for your local hardhat chain
+ETHERNAL_EMAIL=
+ETHERNAL_PASSWORD=
