--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hardhat:chain": "hardhat node",
     "hardhat:fund": "HARDHAT_NETWORK=localhost node hardhat/fund.js",
     "e2e:local": "yarn build:testing && ts-node tests/scripts/local.ts",
-    "test:synpress": "env-cmd -f .env yarn synpress run --config supportFile='tests/e2e/support.js'"
+    "test:synpress": "env-cmd -f .env yarn synpress run --config supportFile='tests/e2e/support.js'",
+    "lint": "eslint \"src/**\""
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -26,6 +27,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^7.4.0",
     "env-cmd": "^10.1.0",
+    "eslint-plugin-chai-friendly": "^0.7.2",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
@@ -55,12 +57,17 @@
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-react": "^1.3.2",
     "babel-loader": "^8.2.5",
-    "eslint": "^8.10.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.3.0",
     "hardhat": "^2.11.2",
     "hardhat-ethernal": "^2.1.0",
