--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "hardhat:fund": "HARDHAT_NETWORK=localhost node hardhat/fund.js",
     "e2e:local": "yarn build:testing && ts-node tests/scripts/local.ts",
     "test:synpress": "env-cmd -f .env yarn synpress run --config supportFile='tests/e2e/support.js'",
-    "lint": "eslint \"src/**\""
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@rollup/plugin-inject": "^4.0.4",
+    "@storybook/react": "^6.5.12",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
@@ -30,6 +33,7 @@
     "eslint-plugin-chai-friendly": "^0.7.2",
     "ethers": "^5.5.4",
     "gsap": "^3.9.1",
+    "hardhat-ethernal": "^2.1.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.6",
     "react": "^18.2.0",
@@ -38,19 +42,18 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23",
-    "wagmi": "^0.6.8"
+    "wagmi": "^0.6.8",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-vite": "^0.1.39",
-    "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@synthetixio/synpress": "latest",
     "@types/lodash": "^4.14.182",
@@ -70,7 +73,6 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.3.0",
     "hardhat": "^2.11.2",
-    "hardhat-ethernal": "^2.1.0",
     "kill-port": "^2.0.1",
     "postcss-import": "^14.1.0",
     "prettier": "^2.5.1",
@@ -79,8 +81,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.8",
-    "vite-tsconfig-paths": "^3.5.1",
-    "web-vitals": "^2.1.4"
+    "vite-tsconfig-paths": "^3.5.1"
   },
   "volta": {
     "node": "16.13.2",
