--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,4 +13,5 @@ jobs:
         with:
           node-version: 16.13.2
       - run: yarn install --immutable --immutable-cache --check-cache
+      - run: yarn lint
       - run: yarn build
