--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rollup/plugin-inject": "^4.0.4",
     "@storybook/react": "^6.5.12",
     "@tailwindcss/typography": "^0.5.2",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "buffer": "^6.0.3",
@@ -39,6 +40,8 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23",
+    "vite": "^2.9.8",
+    "vite-plugin-markdown": "^2.1.0",
     "wagmi": "^0.8.6",
     "web-vitals": "^2.1.4"
   },
@@ -58,7 +61,6 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
-    "@vitejs/plugin-react": "^1.3.2",
     "babel-loader": "^8.2.5",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -76,7 +78,7 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.4",
-    "vite": "^2.9.8",
+    
     "vite-tsconfig-paths": "^3.5.1"
   },
   "volta": {
