increase body font size for about page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,6 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   }
+,
+"tailwindCSS.rootFontSize": 18,
 }
