--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@ethersproject/providers": "^5.7.2",
+    "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@rollup/plugin-inject": "^4.0.4",
     "@storybook/react": "^6.5.12",
