try safe app icon again

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "BREADCHAIN Crowdstaking",
   "description": "Bake and Burn BREAD",
-  "iconPath": "bread_favicon.png",
+  "iconPath": "https://development.breadchain.xyz/breadlogo.png",
   "Access-Control-Allow-Origin": "*",
   "Access-Control-Allow-Methods": "GET",
   "Access-Control-Allow-Headers": "X-Requested-With, content-type, Authorization"
