--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23",
+    "viem": "^1.5.4",
     "vite": "^2.9.8",
     "vite-plugin-markdown": "^2.1.0",
     "wagmi": "^1.3.9",
