--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/preset-typescript": "^7.22.5",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
@@ -59,14 +59,15 @@
     "@storybook/builder-vite": "^0.1.39",
     "@storybook/testing-library": "^0.0.13",
     "@synthetixio/synpress": "latest",
+    "@types/eslint": "^8",
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "babel-loader": "^8.2.5",
     "chalk": "^5.2.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -82,7 +83,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.5.4",
+    "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^3.5.1"
   },
   "volta": {
