--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "env-cmd": "^10.1.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "ethers": "^5.5.4",
+    "graphql": "^16.7.1",
+    "graphql-request": "^6.1.0",
     "gsap": "^3.9.1",
     "hardhat-ethernal": "^2.1.0",
     "postcss": "^8.4.6",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.23",
     "viem": "^1.5.4",
