--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --config .prettierrc 'src/**/*.ts' 'src/**/*.tsx' --write"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@ethersproject/providers": "^5.7.2",
     "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
@@ -30,20 +31,20 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "buffer": "^6.0.3",
+    "clsx": "^2.0.0",
     "concurrently": "^7.4.0",
     "env-cmd": "^10.1.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "ethers": "^5.5.4",
-    "graphql": "^16.7.1",
-    "graphql-request": "^6.1.0",
+    "graphql": "16.6.0",
     "gsap": "^3.9.1",
     "hardhat-ethernal": "^2.1.0",
     "postcss": "^8.4.6",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.3.0",
+    "recharts": "^2.7.3",
     "tailwindcss": "^3.0.23",
     "viem": "^1.5.4",
     "vite": "^2.9.8",
