--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@ethersproject/providers": "^5.7.2",
     "@gnosis.pm/safe-apps-wagmi": "^1.2.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@rollup/plugin-inject": "^4.0.4",
@@ -35,7 +34,6 @@
     "concurrently": "^7.4.0",
     "env-cmd": "^10.1.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "ethers": "^5.5.4",
     "graphql": "16.6.0",
     "gsap": "^3.9.1",
     "hardhat-ethernal": "^2.1.0",
@@ -45,9 +43,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.7.3",
+    "rollup-plugin-visualizer": "^5.9.2",
     "tailwindcss": "^3.0.23",
     "viem": "^1.5.4",
-    "vite": "^2.9.8",
+    "vite": "2.9.8",
+    "vite-plugin-chunk-split": "^0.4.7",
     "vite-plugin-markdown": "^2.1.0",
     "wagmi": "^1.3.9",
     "web-vitals": "^2.1.4"
@@ -85,6 +85,7 @@
     "prettier": "^2.8.3",
     "prettier-plugin-organize-imports": "^3.2.2",
     "rimraf": "^3.0.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
